Add interaction and some other things I can't remember

--- a/src/components/banner-component/banner.scss
+++ b/src/components/banner-component/banner.scss
@@ -76,7 +76,7 @@
             bottom: -20%;
             height: 80%;
             width: auto;
-            transform: rotate(-45deg);
+            transform: rotate(-45deg)scale(1.2);
             z-index: 0;
         }
     
