--- a/src/components/header-component/header.scss
+++ b/src/components/header-component/header.scss
@@ -243,7 +243,7 @@ header {
           align-items: center;
           justify-content: space-between;
           // background: #000;
-          width: 200px;
+          min-width: 240px;
 
             .leaveAmessageButtonDesktop {
                   display: flex;
