--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -21,7 +21,7 @@ body {
 main {
 
   .pageHeader {
-    z-index: 1;
+    z-index: 10;
     display: block;
     width: 100%;
     position: sticky;
@@ -59,7 +59,10 @@ main {
   main {
   
     .childrenWrapper {
-      padding: 0 12% 6% 12%;
+      padding: 0;
+      section {
+        padding: 8% 12%;
+      }
 
       &.modalOn {
         height: unset;
