--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -189,6 +189,23 @@ $anim-speed: 1s;
         }
     }
 
+    .pictureFrameGroup {
+        position: relative;
+
+        .pictureFrame > svg {
+            transform-origin: center right;
+            transform: scale(0.75);
+            circle, path {
+                stroke: var(--picFrameStroke);
+            }
+
+            image {
+                y: 48px;
+                x: 66px;
+            }
+        }
+    }
+
 }
 
 @include for-tinnyP-only() {
@@ -267,9 +284,9 @@ $anim-speed: 1s;
     .secWrapper {
     
         section {
-            padding: 0;
-            margin-bottom: 100px;
-            // height: 80vh;
+            // padding: 0;
+            // margin-bottom: 100px;
+            width: 100%;
             display: flex;
             position: relative;
             align-items: center;
@@ -313,7 +330,8 @@ $anim-speed: 1s;
         }
 
         & > section:first-child {
-            height: calc(100vh - 140px);
+            // height: calc(100vh - 140px);
+            justify-content: space-between;
 
             .textp2 {
                 .ImgMobile {
@@ -383,9 +401,35 @@ $anim-speed: 1s;
             }
         }
 
+        #projectFolder {
+            background: #C1CBFF;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            
+            .thumbnailWrapper {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                width: 100%;
+                gap: 32px;
+                background-color: #AAB2E0;
+                background-blend-mode: multiply;
+                padding: 40px;
+                border-radius: 24px;
+                margin-top: 48px;
+                position: relative;
+
+                svg {
+                    position: absolute;
+                    right: 56px;
+                    top: -30px;
+                    z-index: 1;
+                }
+            }
+        }
+
 
         .aboutMe {
-            margin-top: 150px;
 
             .aboutMeContentHolder {
                 flex-direction: row-reverse;
@@ -530,5 +574,9 @@ $anim-speed: 1s;
                 }    
             }
         }
+
+        // .pictureFrameGroup {
+        //     transform: scale(0.75);
+        // }
     }
 }
