--- a/src/pages/projects/aellaFinanceApp/aellaFinDesignProcess.scss
+++ b/src/pages/projects/aellaFinanceApp/aellaFinDesignProcess.scss
@@ -165,6 +165,7 @@
         display: flex;
         justify-content: space-between;
         flex-direction: row-reverse;
+        padding: 0 12% 6% 12%;
         margin: 0 0 80px;
     
         .aellaContentInfo {
@@ -181,8 +182,6 @@
 
             .sectionHolder {
                 padding-top: 140px;
-
-                
 
                 .sectionHolderDescription {
                     width: 90%;
