--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -402,7 +402,7 @@ $anim-speed: 1s;
         }
 
         #projectFolder {
-            background: #C1CBFF;
+            background: var(--projectFolder);
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -412,7 +412,7 @@ $anim-speed: 1s;
                 grid-template-columns: 1fr 1fr;
                 width: 100%;
                 gap: 32px;
-                background-color: #AAB2E0;
+                background-color: var(--thumbnailWrapper);
                 background-blend-mode: multiply;
                 padding: 40px;
                 border-radius: 24px;
@@ -422,7 +422,7 @@ $anim-speed: 1s;
                 svg {
                     position: absolute;
                     right: 56px;
-                    top: -30px;
+                    top: -55px;
                     z-index: 1;
                 }
             }
