--- a/src/pages/projects/konga/kongaDesignProcess.scss
+++ b/src/pages/projects/konga/kongaDesignProcess.scss
@@ -98,6 +98,7 @@
         display: flex;
         justify-content: space-between;
         flex-direction: row-reverse;
+        padding: 0 12% 6% 12%;
         margin: 0 0 80px;
     
         .kongaContentInfo {
